crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_binary_resp_server.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"io"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/files/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := r.PathValue("id")
		result, err := h.DownloadFile(id)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/octet-stream")
		_, _ = io.Copy(w, result)
	})
	return mux
}
