crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_binary_resp_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api
