crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_chi_server_full_surface.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"io"
	"net/http"
	"strconv"
	"strings"

	"github.com/go-chi/chi/v5"
)

// NewRouter creates a chi.Router that routes requests to the given handlers.
func NewRouter(h Handlers) chi.Router {
	router := chi.NewRouter()
	router.MethodFunc("GET", "/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		result, err := h.GetUser(id)
		if err != nil {
			if strings.Contains(err.Error(), "NotFound") {
				http.Error(w, "NotFound", 404)
				return
			}
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	router.MethodFunc("POST", "/users", func(w http.ResponseWriter, r *http.Request) {
		var body CreateUserBody
		if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		if err := body.Validate(); err != nil {
			http.Error(w, "ValidationError", 400)
			return
		}
		result, err := h.CreateUser(body)
		if err != nil {
			if strings.Contains(err.Error(), "Conflict") {
				http.Error(w, "Conflict", 409)
				return
			}
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	router.MethodFunc("GET", "/users", func(w http.ResponseWriter, r *http.Request) {
		page := int64(1)
		if v := r.URL.Query().Get("page"); v != "" {
			page, _ = strconv.ParseInt(v, 10, 64)
		}
		var q *string
		if v := r.URL.Query().Get("q"); v != "" {
			q = &v
		}
		active := true
		if v := r.URL.Query().Get("active"); v != "" {
			active, _ = strconv.ParseBool(v)
		}
		result, err := h.ListUsers(page, q, active)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	router.MethodFunc("PATCH", "/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		authorization := ""
		if v := r.Header.Get("Authorization"); v != "" {
			authorization = v
		}
		var trace *string
		if v := r.Header.Get("X-Trace"); v != "" {
			trace = &v
		}
		result, err := h.PatchUser(id, authorization, trace)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		w.Header().Set("X-Rate-Remaining", strconv.FormatInt(result.Remaining, 10))
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result.Body)
	})
	router.MethodFunc("PUT", "/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		var body UpsertUserBody
		if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		if err := body.Validate(); err != nil {
			http.Error(w, "ValidationError", 400)
			return
		}
		result, err := h.UpsertUser(id, body)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		switch result.Status {
		case 200, 201:
			if result.Body == nil {
				http.Error(w, "handler returned no body for a typed status", http.StatusInternalServerError)
				return
			}
		case 204:
			if result.Body != nil {
				http.Error(w, "handler returned a body for a bodyless status", http.StatusInternalServerError)
				return
			}
		default:
			http.Error(w, "handler returned undeclared status", http.StatusInternalServerError)
			return
		}
		if result.Body != nil {
			w.Header().Set("Content-Type", "application/json")
			w.WriteHeader(result.Status)
			json.NewEncoder(w).Encode(result.Body)
		} else {
			w.WriteHeader(result.Status)
		}
	})
	router.MethodFunc("POST", "/users/{id}/avatar", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		if err := r.ParseMultipartForm(32 << 20); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		defer func() { _ = r.MultipartForm.RemoveAll() }()
		var body UploadAvatarBody
		fAvatar, fhAvatar, err := r.FormFile("avatar")
		if err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		_ = fAvatar.Close()
		body.Avatar = fhAvatar
		body.Caption = r.FormValue("caption")
		result, err := h.UploadAvatar(id, body)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	router.MethodFunc("GET", "/docs/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		result, err := h.DownloadDoc(id)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/octet-stream")
		_, _ = io.Copy(w, result)
	})
	router.MethodFunc("DELETE", "/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := chi.URLParam(r, "id")
		if err := h.DeleteUser(id); err != nil {
			if strings.Contains(err.Error(), "NotFound") {
				http.Error(w, "NotFound", 404)
				return
			}
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.WriteHeader(http.StatusNoContent)
	})
	return router
}
