crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_float_enum_query_client.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"fmt"
	"net/http"
	"net/url"
	"strconv"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) ListItems(minScore float64, sort Sort, fallback *Sort) (*[]Item, error) {
	u := fmt.Sprintf("%s/api/items", c.BaseURL)
	q := url.Values{}
	q.Set("minScore", strconv.FormatFloat(minScore, 'f', -1, 64))
	q.Set("sort", fmt.Sprint(sort))
	if fallback != nil {
		q.Set("fallback", fmt.Sprint(*fallback))
	}
	u += "?" + q.Encode()
	req, err := http.NewRequest("GET", u, nil)
	if err != nil {
		return nil, err
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	var result []Item
	if err := json.NewDecoder(resp.Body).Decode(&result); err != nil {
		return nil, err
	}
	return &result, nil
}
