crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_float_enum_query_handlers.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

package api

// Handlers defines the interface that server implementations must satisfy.
type Handlers interface {
	ListItems(minScore float64, sort Sort, fallback *Sort) (*[]Item, error)
}
