crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_float_enum_query_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
	"strconv"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/items", func(w http.ResponseWriter, r *http.Request) {
		minScore := float64(0.5)
		if v := r.URL.Query().Get("minScore"); v != "" {
			minScore, _ = strconv.ParseFloat(v, 64)
		}
		sort := Sort("")
		if v := r.URL.Query().Get("sort"); v != "" {
			sort = Sort(v)
		}
		if !sort.Valid() {
			http.Error(w, "invalid query param: sort", http.StatusBadRequest)
			return
		}
		var fallback *Sort
		if v := r.URL.Query().Get("fallback"); v != "" {
			cv := Sort(v)
			if !cv.Valid() {
				http.Error(w, "invalid query param: fallback", http.StatusBadRequest)
				return
			}
			fallback = &cv
		}
		result, err := h.ListItems(minScore, sort, fallback)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
